CATTY-571 Add warning dialog for sendWebRequest brick
CATTY-571 Tmp activation of WebRequestBrick


CATTY-571 Implement URL Extraction


CATTY-571 Update Structure


CATTY-571 Implement Basic Whitelist Structure


CATTY-571 First Working PoC


CATTY-571 Split into seperate class


CATTY-571 Implement proper plist loading


CATTY-571 Implement FileManagerMock


CATTY-571 Implement URL standardization test


CATTY-571 Implement better way to clear the whitelist


CATTY-571 Implement FileManagerExtension


CATTY-571 Rename TrustedDomain and extend tests


CATTY-571 Clean FileManager


CATTY-571 Clean FileManager


CATTY-571 Exchange FileManager with CBFileManager


CATTY-571 Clean Constructor

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -67,6 +67,9 @@
 /* No comment provided by engineer. */
 "Allow the app to send crash reports automatically" = "Allow the app to send crash reports automatically";
 
+/* No comment provided by engineer. */
+"Allow web access" = "Allow web access";
+
 /* paint */
 "Alpha" = "Alpha";
 
