CATTY-395 Implement SetBackgroundByIndexBrick
CATTY-395

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1610,6 +1610,9 @@
 "Set background and wait" = "Set background and wait";
 
 /* No comment provided by engineer. */
+"Set background to number" = "Set background to number";
+
+/* No comment provided by engineer. */
 "Set brightness " = "Set brightness ";
 
 /* No comment provided by engineer. */
