CATTY-542 PPPP: "user language" sensor for locale

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1976,6 +1976,9 @@
 "Use Phiro bricks" = "Use Phiro bricks";
 
 /* No comment provided by engineer. */
+"user language" = "user language";
+
+/* No comment provided by engineer. */
 "Username" = "Username";
 
 /* No comment provided by engineer. */
