CATTY-541-PPPP-"items-index(abc,-list-name-)"-function

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -857,6 +857,9 @@
 "inclination y" = "inclination y";
 
 /* No comment provided by engineer. */
+"index of item" = "index of item";
+
+/* No comment provided by engineer. */
 "Information" = "Information";
 
 /* No comment provided by engineer. */
