PPPP: Add "touches finger" sensor

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1919,6 +1919,9 @@
 "touches actor or object" = "touches actor or object";
 
 /* No comment provided by engineer. */
+"touches finger" = "touches finger";
+
+/* No comment provided by engineer. */
 "transparency" = "transparency";
 
 /* No comment provided by engineer. */
