--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1922,6 +1922,9 @@
 "touches actor or object" = "touches actor or object";
 
 /* No comment provided by engineer. */
+"touches edge" = "touches edge";
+
+/* No comment provided by engineer. */
 "touches finger" = "touches finger";
 
 /* No comment provided by engineer. */
