CATTY-472 Refactor ProjectDetailStoreViewControllerExtension and add tags

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -557,6 +557,9 @@
 "Download" = "Download";
 
 /* No comment provided by engineer. */
+"Download again" = "Download again";
+
+/* No comment provided by engineer. */
 "Download too big" = "Download too big";
 
 /* No comment provided by engineer. */
