CATTY-625 Stop current stitch brick

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1784,6 +1784,9 @@
 "Stop all sounds" = "Stop all sounds";
 
 /* No comment provided by engineer. */
+"Stop current stitch" = "Stop current stitch";
+
+/* No comment provided by engineer. */
 "Stop Phiro motor" = "Stop Phiro motor";
 
 /* No comment provided by engineer. */
