CATTY-369 Implement place visually feature

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -1529,6 +1529,9 @@
 "Place at " = "Place at ";
 
 /* No comment provided by engineer. */
+"Place visually" = "Place visually";
+
+/* No comment provided by engineer. */
 "Play" = "Play";
 
 /* No comment provided by engineer. */
